--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#666",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "我是首页",
     "navigationBarTextStyle": "white"
   },
   "tabBar": {
